# pizza-store-backend

./: .gitignore  .mypy.ini  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
nginx/templates/: default.conf.template
pizza_store/: app.py  settings.py
pizza_store/constants/: __init__.py  files.py  paths.py  roles.py
pizza_store/db/: db.py
pizza_store/db/crud/: __init__.py
pizza_store/db/crud/category/: __init__.py  crud.py  interface.py
pizza_store/db/crud/product/: __init__.py  crud.py  interface.py
pizza_store/db/crud/refresh_token/: __init__.py  crud.py  interface.py
pizza_store/db/crud/user/: __init__.py  crud.py  interface.py
pizza_store/db/models/: __init__.py  category.py  product.py  refresh_token.py  user.py
pizza_store/dependencies/: db.py  services.py
pizza_store/enums/: __init__.py  permissions.py  role.py
pizza_store/models/: __init__.py  category.py  product.py  user.py
pizza_store/routers/: __init__.py  auth.py  category.py  product.py  root.py
pizza_store/services/: __init__.py
pizza_store/services/auth/: __init__.py  interface.py  service.py
pizza_store/services/category/: __init__.py  interface.py  service.py
pizza_store/services/product/: __init__.py  interface.py  service.py
pizza_store/utils/: files.py
tests/tests_db/tests_crud/: test_category.py  test_product.py  test_refresh_token.py  test_user.py
tests/tests_services/: test_auth.py
