[tool.poetry]
name = "pizza_store"
version = "0.1.0"
description = ""
authors = ["astsu <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.4"}
pydantic = "^1.8.2"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
