[tool.poetry]
name = "pizza_store"
version = "0.1.0"
description = ""
authors = ["astsu <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
pydantic = "^1.8.2"
python-dotenv = "^0.17.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.18"}

[tool.poetry.dev-dependencies]
mypy = "^0.902"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
