[tool.poetry]
name = "pizza_store"
version = "0.1.0"
description = ""
authors = ["astsu <you@example.com>"]

[tool.poe.tasks]
run = "python -m pizza_store"
test = "pytest -vvv tests"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
pydantic = "^1.8.2"
python-dotenv = "^0.17.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.18"}
asyncpg = "^0.23.0"
PyJWT = "^2.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
mypy = "^0.902"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
poethepoet = "^0.10.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
